--- a/20260126_notatka.html
+++ b/20260126_notatka.html
@@ -71,47 +71,119 @@ Notatki – Zbrodnia i Kara
 <div class="container">
 
     <div class="note">
-        <h2>T: Cechy gatunkowe „Zbrodni i Kary”</h2>
+        <h2>Znaczenie tytułu "Zbrodnia i Kara"</h2>
+        <pre>
+Tytuł pierwotny nadał powieści w języku polskim pierwszy tłumacz utworu, ale nie oddaje on wieloznaczności tytułu oryginalnego. W języku rosyjskim tytuł brzmi "Priestu Prenije" - przekroczenie prawa i "Nakazanje" - kara, przestroga, nauczka co daje większe możliwości interpretacyjne i odnosi się do działań głównego bohatera.
+        </pre>
+    </div>
+    <div class="note">
+        <h2>Świat przedstawiony powieści</h2>
+        <pre>
+a) Czas i miejsce akcji:
+- czas - lata 60 XIX wieku, 14 dni lipca 1865 r
+- miejsce akcji - Rosja, Petersburg 
+b) Narracja
+- narrator 3 osobowy wszechwiedzący 
+c) Bohaterowie:
+- Rodion Roskolnikow
+- Sonia Marmieładow 
+- Dymitr Razumichin 
+- Eudoksja Roskolnikow (Dunią)
+- Pulcheria Roskolnikow,
+- Siemion Marmieładow 
+- Piotr Łużyn
+- Arkadiusz Swidrygajłow 
+- Porfiry Pietrowicz,
+- Aleksander Zamiotow 
+- Alona Limanowna 
+- Lizawieta Limanowa.
+        </pre>
+    </div>
+    <div class="note">
+        <h2>Rodion Raskolnikow</h2>
+        <pre>
+1. Ogólna charakterystyka Rodiona Roskolnikowa:
+a) Pochodzenie
+b) Wygląd 
+c) Cechy charakteru
+
+2. Relacje Rodiona z ludźmi - innymi bohaterami:
+a) z Sonią Marmieładow
+b) z Dymitrem Razumiechinem
+c) z siostrą Dunią (i matką)
+d) z Łużynem
+
+3. Przyczyny popełnienia zbrodni przez Rodiona:
+a) Artykuł w gazecie i wyznawana filozofia
+b) sny
+c) warunki życia
+
+4. Popełnienie zbrodni i konsekwencje związane z marderstwem lichwiarki:
+a) Schemat zbrodni
+b) Choroba i wyrzuty sumienia
+c) wpływ Sonii
+d) Pokuta - przyznanie się do winy syberia
+        </pre>
+    </div>
+    <div class="note">
+        <h2>Podsumowanie Rodion Raskolnikow</h2>
+        <pre> 
+a) Nazwisko bohatera oznacza odczepieniec, czyli ktoś żyjący na uboczu, obcy
+b) przed popełnieniem zbrodni twierdzi, że nie wieży w życie wieczne, jest ateistą.
+c) Jest człowiekiem który myśli o innych np. pomaga choremu koledze ze studiów, wynosi z pożaru dzieci, daje Soni pieniądze na pogrzeb ojca.
+d) Wyznaje zasadę że ludzie dzielą się na tzw. nadludzi do których zalicza siebie i "wszy ludzkie" do których zalicza Alonę Iwanowną.
+e) Przed zbrodnią kieruje się tylko rozumem, odrzuca to co duchowe i wyrzuty sumienia.
+f) Morduje lichwiarkę, zbrodnie wcześniej dokładnie zaplanował, chcę dzięki temu mieć pieniądze na własne utrzymanie i pomóc biednym. 
+g) Po zbrodni ma wyrzuty sumienia, boi się sądu i kary, nie wykorzystuje zagrabionych kosztowności.
+h) Po Poznaniu Soni Marmieładow i pod jej wpływem oraz historii o Łazarzu postanawia przyznać się do winy i ponieść zasłużoną karę, ale długo nawet na Syberii nie potrafi przyznać się do winy przed samym sobą.
+        </pre>
+    </div>
+    <div class="note">
+        <h2>Sonia Marmieładow</h2>
+        <pre> 
+a) Kobieta jest wykorzystywana przez swoją rodzinę aby się prostytuować i zarabia pieniądze.
+b) Jest to kobieta bezbarwna, nieporadna i wycofana, ale głęboko wierząca, cel życia widzi w piśmie świętym.
+c) Kiedy spotyka Rodiona Roskolnikowa i gdy dowiaduje się o morderstwie nie krytykuje go, nie ocenia, stara się mu pomóc i wrócić na własną drogę.
+d) Mimo trudnego życia potrafi się poświęcić i wyjeżdża z Rodionem na Syberię, tam też uczy go czym jest poświęcenie dla drugiego człowieka oraz miłość.
+e) Mimo wykonywania zawodu prostytutki jest kobietą czysto duchowo, potrafiącą współczuć i pomagać innym.
+        </pre>
+    </div>
+    <div class="note">
+        <h2>Cechy gatunkowe "Zbrodni i Kary"</h2>
         <pre>
 Zbrodnia i Kara łączy w sobie cechy różnych odmian powieści.
-
 a) Powieść Psychologiczna - w utworze występuje pogłębiona analiza psychiki bohaterów zwłaszcza Rodiona Roskolnikowa i Soni Marmieładow.
-
-b) Powieść Realistyczna - działania postaci są przedstawione wiernie i szczegółowo. W pokazywanych realiach topograficznych miasta - Petersburga, realiach społecznych drugiej połowy XIX wieku w Rosji, czyli podział na biednych i bogatych oraz realiach obyczajowych np. prostytuowanie się Soni aby pomóc finansowo rodzinie.
-
+b) Powieść Realistyczna - działania postaci są przedstawione wiernie i szczegółowo. W pokazywanych realiach topograficznych miasta - Petersburga, realiach społecznych drugiej połowy XIX wieku w Rosji, czyli podział na biednych i bogatych oraz realiach obyczajowych np. prostytuowanie się Soni aby pomóc finansowo rodzinie. 
 c) Powieść Naturalistyczna - w utworze drobiazgowo zostały opisane obrazy nędzy, np. życie Rodiona, alkoholizm - np. postać ojca Soni - Marmieładowa, prostytucji - funkcjonowanie domów publicznych w Petersburgu, postać Soni oraz szczegółowy opis morderstwa którego dokonał Rodion na lichwiarce.
-
-d) Powieść Kryminalna - głównym wątkiem utworu jest morderstwo, a czytelnik poznaje działania przestępcy, np. przygotowania Rodiona do morderstwa i przeżycia po jego dokonaniu oraz działania sędziego śledczego Profirego Pietrowicza, który od samego początku podejrzewa, że zabójstwa dokonał Roskolnikow.
-
+d) Powieść Kryminalna - głównym wątkiem utworu jest morderstwo, a czytelnik poznaje działania przestępcy, np. przygotowania Rodiona do morderstwa i przeżycia po jego dokonaniu oraz działania sędziego śledczego Profirego Pietrowicza, który od samego początku podejrzewa, że zabójstwa dokonał Roskolnikow. 
 e) Powieść Polifoniczna inaczej wielogłosowa - w utworze występuje zestawienie różnych stanowisk ideowych i filozoficznych, moralnych, religijnych, bohaterowie prezentują równe z wypowiedziami narratora, np. Rodion i Sonia inaczej oceniają morderstwo, Rodion w sposób filozoficzny, racjonalny twierdzi że zabijając Alonę pomógł biednym, Sonia w sposób moralny i religijny, dla niej zbrodnia jest zła, bo to grzech.
         </pre>
     </div>
-
     <div class="note">
-        <h2>T: Obraz Petersburga ukazany w „Zbrodni i Karze”</h2>
+        <h2>Petersburg</h2>
         <pre>
+Obraz Petersburga ukazany w "Zbrodni i Karze".
 a) Informacje ogólne o Petersburgu:
 - drugi największy ośrodek kulturalny i gospodarczy w Rosji,
-- miasto znajduje się w delcie rzeki Newy nad Zatoką Fińską,
+- miasto znajduje się w delcie rzeki Jest nad zatoką Finską,
 - stolica Rosji do początku XX wieku
-
 b) Realia społeczne Petersburga II połowy XIX wieku:
-- miasto kontrastów społecznych w którym obok siebie żyją bardzo bogaci i bardzo biedni
-- część biedna miasta jest nie skanalizowana, ulice nie wybrukowane
-- występuje wysoka przestępczość, o czym świadczą liczne interwencje policji
+- miasto kontrastów społecznych w którym obok siebie żyją bardzo bogaci i bardzo biedni 
+- część biedna miasta jest nie skanalizowana, ulice nie wybrukowane,
+- występuje wysoka przestępczość, o czym świadczą liczne interwencje policji,
 - alkoholizm, prostytucja
-- biedna część społeczeństwa nawet w godzinach porannych przebywa w szynkach oraz traktierniach
-
+- biedna część społeczeństwa nawet w godzinach porannych przebywa w szynkach (piwiarnie, bary, w których sprzedaje się alkohol) oraz traktierniach (restauracje niskiej klasy, jabłodajnie, gar kuchnie)
 c) Obraz miasta w powieści:
-- ludzie wyglądają jak półobłąkani, zaniedbani, ubrani pstrokato
-- w lecie panuje nieznośny zaduch, smród i kurz
-- na ulicach nawet rano znajdują się pijani mężczyźni i kobiety lekkich obyczajów
-- część biedna miasta pozbawiona jest zieleni
-- w kamienicach znajdują się małe, przytłaczające pokoje
-- na ulicach panuje ciągły hałas, chaos i krzyki ludzi
-- miasto jest mroczne, tajemnicze i niebezpieczne
-- funkcjonuje odwrócony porządek norm moralnych i społecznych
-- miasto nazywane jest demonem i przedsionkiem piekła
+- ludzie wyglądają jak półobłąkani, zaniedbani, ubrani pstrokato, zniszczona odzież,
+- w lecie (akcja dzieje się w lipcu) panuje nieznośny zaduch, smród z szynków i kamienic, kurz od ciągłych remontów, a ulice są zatłoczone
+- na ulicach nawet rano w dzień powszedni znajdują się pijani mężczyźni i kobiety lekkich obyczajów,
+- część biedna miasta pozbawiona jest zieleni, a zamurowana licznymi kamienicami w których tłoczą się ludzie,
+- w kamienicach znajdują się małe, przytłaczające pokoje, izdebki, mieszkania np. strychowy pokój Rodiona, mieszkanie Soni,
+- na ulicach panuje ciągły hałas, haos i krzyki ludzi którzy żyją w ubóstwie bez perspektyw,
+- jest to miasto tajemnicze, mroczne i niebezpieczne, które min. było powodem zbrodni Rodiona,
+- funkcjonuje w nim odwrócony porządek norm społecznych i moralnych, czyli powszechnie funkcjonuje bezprawie i przemoc.
+- przestrzeń miasta powoduje, że ludzie stają się nerwowi i powstają negatywne relacje międzyludzkie,
+- nawet mieszkańcy nazywają miasto demonem, przedsionkiem piekła w którym ludzie pozostawieni sami sobie zarażają się złem np. Lichwiarka Alona, Rodion, Łużyn itp.
         </pre>
     </div>
 
