--- a/20250901_szkola.html
+++ b/20250901_szkola.html
@@ -22,6 +22,8 @@
         <div class="table-wrapper">
             <table border="1">
 <tr><th>Lp.</th><th>Nazwa</th></tr>
+<tr><td></td><td><a href="https://dawid108.github.io/dawi2026/index.html">Gry</a></td></tr>
+<tr><td></td><td><a href="https://dawid108.github.io/dawi2026/20260106_gry.html">Tabela</a></td></tr>
 <tr><td></td><td><a href="20260126_zbrodnia.html">Zbrodnia i Kara 2</a></td></tr>
 <tr><td></td><td><a href="20260126_petersburg.html">Petersburg</a></td></tr>
 <tr><td></td><td><a href="20260126_cechy.html">Cechy Gatunkowe</a></td></tr>
