--- a/20260201_angielski.html
+++ b/20260201_angielski.html
@@ -70,7 +70,36 @@ let questions = [
 {cat:"Body and mind", q:"liver", a:"wątroba", b:"nerka", c:"trzustka", d:"śledziona"},
 {cat:"Body and mind", q:"could have had an argument", a:"pokłócili się", b:"porozmawiali", c:"dogadali się", d:"spotkali się"},
 {cat:"Body and mind", q:"Therefore", a:"Dlatego", b:"Jednak", c:"Ponieważ", d:"Chociaż"},
-{cat:"Body and mind", q:"make", a:"umówić się na", b:"zdecydować się na", c:"zrezygnować z", d:"zastanowić się"}
+{cat:"Body and mind", q:"make", a:"umówić się na", b:"zdecydować się na", c:"zrezygnować z", d:"zastanowić się"},
+{cat:"Body and mind", q:"dissatisfaction", a:"niezadowolenie", b:"zadowolenie", c:"cierpliwość", d:"satysfakcja"},
+{cat:"Body and mind", q:"medical care", a:"opieka medyczna", b:"pomoc domowa", c:"opieka prawna", d:"usługa zdrowia"},
+{cat:"Body and mind", q:"appointment", a:"wizyta", b:"spotkanie", c:"zaproszenie", d:"terminarz"},
+{cat:"Body and mind", q:"ice rink", a:"lodowisko", b:"basen", c:"boisko", d:"hala sportowa"},
+{cat:"Body and mind", q:"skate", a:"łyżwa", b:"but", c:"deska", d:"kask"},
+{cat:"Body and mind", q:"thigh", a:"udo", b:"łydka", c:"kolano", d:"biodro"},
+{cat:"Body and mind", q:"bleeding", a:"krwawienie", b:"oparzenie", c:"obrzęk", d:"ból"},
+{cat:"Body and mind", q:"stitches", a:"szwy", b:"opatrunki", c:"zastrzyki", d:"plastry"},
+{cat:"Body and mind", q:"hospital", a:"szpital", b:"apteka", c:"klinika", d:"przychodnia"},
+{cat:"Body and mind", q:"dressing", a:"opatrunek", b:"bandaż", c:"maść", d:"lek"},
+{cat:"Body and mind", q:"wound", a:"rana", b:"siniak", c:"zadrapanie", d:"blizna"},
+{cat:"Body and mind", q:"heal", a:"goić się", b:"boleć", c:"puchnąć", d:"krwawić"},
+{cat:"Body and mind", q:"recommendations", a:"rekomendacje", b:"skargi", c:"instrukcje", d:"pytania"},
+{cat:"Body and mind", q:"foreign", a:"zagraniczny", b:"lokalny", c:"krajowy", d:"prywatny"},
+{cat:"Body and mind", q:"patients", a:"pacjenci", b:"lekarze", c:"pielęgniarki", d:"ratownicy"},
+{cat:"Body and mind", q:"treatment", a:"leczenie", b:"badanie", c:"diagnoza", d:"rehabilitacja"},
+{cat:"Body and mind", q:"suggestion", a:"sugestia", b:"odmowa", c:"decyzja", d:"problem"},
+{cat:"Body and mind", q:"language support", a:"wsparcie językowe", b:"pomoc techniczna", c:"opieka prawna", d:"tłumaczenie pisemne"},
+{cat:"Body and mind", q:"recommend", a:"zalecać", b:"zakazywać", c:"unikać", d:"odmawiać"},
+{cat:"Body and mind", q:"staff", a:"personel", b:"pacjenci", c:"klienci", d:"kadra"},
+{cat:"Body and mind", q:"patient (adj.)", a:"cierpliwy", b:"nerwowy", c:"szybki", d:"zmęczony"},
+{cat:"Body and mind", q:"helpful", a:"pomocny", b:"obojętny", c:"surowy", d:"nieobecny"},
+{cat:"Body and mind", q:"take steps", a:"podjąć kroki", b:"zrobić przerwę", c:"zmienić zdanie", d:"cofnąć decyzję"},
+{cat:"Body and mind", q:"resolve", a:"rozwiązać", b:"pogorszyć", c:"odłożyć", d:"zignorować"},
+{cat:"Body and mind", q:"problems", a:"problemy", b:"wyniki", c:"zasady", d:"pytania"},
+{cat:"Body and mind", q:"future", a:"przyszłość", b:"teraźniejszość", c:"przeszłość", d:"moment"},
+{cat:"Body and mind", q:"look forward to", a:"z niecierpliwością czekać", b:"unikać", c:"odkładać", d:"zapominać"},
+{cat:"Body and mind", q:"hearing from you", a:"otrzymanie odpowiedzi", b:"spotkanie osobiste", c:"rozmowa telefoniczna", d:"wysłanie listu"},
+{cat:"Body and mind", q:"quality", a:"jakość", b:"ilość", c:"cena", d:"poziom"}
 ];
 
 let current = 0;
