--- a/20260201_angielski.html
+++ b/20260201_angielski.html
@@ -99,7 +99,79 @@ let questions = [
 {cat:"Body and mind", q:"future", a:"przyszłość", b:"teraźniejszość", c:"przeszłość", d:"moment"},
 {cat:"Body and mind", q:"look forward to", a:"z niecierpliwością czekać", b:"unikać", c:"odkładać", d:"zapominać"},
 {cat:"Body and mind", q:"hearing from you", a:"otrzymanie odpowiedzi", b:"spotkanie osobiste", c:"rozmowa telefoniczna", d:"wysłanie listu"},
-{cat:"Body and mind", q:"quality", a:"jakość", b:"ilość", c:"cena", d:"poziom"}
+{cat:"Body and mind", q:"quality", a:"jakość", b:"ilość", c:"cena", d:"poziom"}, 
+{cat:"Body and mind", q:"sleepwalking", a:"lunatykowanie", b:"bezsenność", c:"koszmary", d:"drzemanie"},
+{cat:"Body and mind", q:"incident", a:"zdarzenie", b:"leczenie", c:"objaw", d:"badanie"},
+{cat:"Body and mind", q:"percentage", a:"procent", b:"liczba", c:"wiek", d:"ilość"},
+{cat:"Body and mind", q:"to suffer from", a:"cierpieć na", b:"leczyć się", c:"unikać", d:"ignorować"},
+{cat:"Body and mind", q:"common", a:"powszechny", b:"rzadki", c:"dziwny", d:"losowy"},
+{cat:"Body and mind", q:"medication", a:"leki", b:"operacja", c:"uraz", d:"infekcja"},
+{cat:"Body and mind", q:"natural", a:"naturalny", b:"sztuczny", c:"chemiczny", d:"fałszywy"},
+{cat:"Body and mind", q:"nightmare", a:"koszmar", b:"senność", c:"zmęczenie", d:"drzemka"},
+{cat:"Body and mind", q:"unlikely", a:"mało prawdopodobny", b:"oczekiwany", c:"regularny", d:"planowany"},
+{cat:"Body and mind", q:"to avoid", a:"unikać", b:"powtarzać", c:"wywoływać", d:"akceptować"},
+{cat:"Body and mind", q:"violent", a:"agresywny", b:"spokojny", c:"senny", d:"cichy"},
+{cat:"Body and mind", q:"interview", a:"wywiad", b:"ogłoszenie", c:"instrukcja", d:"raport"},
+{cat:"Body and mind", q:"cause", a:"przyczyna", b:"skutek", c:"wynik", d:"objaw"},
+{cat:"Body and mind", q:"treatment", a:"leczenie", b:"diagnoza", c:"badanie", d:"profilaktyka"},
+{cat:"Body and mind", q:"fact", a:"fakt", b:"opinia", c:"wrażenie", d:"przypuszczenie"},
+{cat:"Body and mind", q:"sedentary", a:"siedzący", b:"aktywny", c:"sportowy", d:"ruchliwy"},
+{cat:"Body and mind", q:"safeguard", a:"chronić", b:"niszczyć", c:"zaniedbywać", d:"osłabiać"},
+{cat:"Body and mind", q:"strenuous", a:"wyczerpujący", b:"lekki", c:"spokojny", d:"wolny"},
+{cat:"Body and mind", q:"to overdo", a:"przesadzać", b:"odpoczywać", c:"planować", d:"kontrolować"},
+{cat:"Body and mind", q:"consequence", a:"konsekwencja", b:"nagroda", c:"przyjemność", d:"rozrywka"},
+{cat:"Body and mind", q:"carbohydrates", a:"węglowodany", b:"białka", c:"tłuszcze", d:"witaminy"},
+{cat:"Body and mind", q:"to consume", a:"spożywać", b:"unikać", c:"wyrzucać", d:"odmawiać"},
+{cat:"Body and mind", q:"weight gain", a:"przyrost wagi", b:"utrata wagi", c:"brak zmian", d:"zmęczenie"},
+{cat:"Body and mind", q:"unhappiness", a:"niezadowolenie", b:"radość", c:"spokój", d:"satysfakcja"},
+{cat:"Body and mind", q:"strain", a:"przeciążenie", b:"ulga", c:"odpoczynek", d:"relaks"},
+{cat:"Body and mind", q:"muscle", a:"mięsień", b:"kość", c:"staw", d:"nerw"},
+{cat:"Body and mind", q:"to boost", a:"zwiększać", b:"zmniejszać", c:"blokować", d:"zatrzymywać"},
+{cat:"Body and mind", q:"production", a:"produkcja", b:"redukcja", c:"kontrola", d:"analiza"},
+{cat:"Body and mind", q:"endorphins", a:"endorfiny", b:"adrenalina", c:"insulina", d:"melatonina"},
+{cat:"Body and mind", q:"hormone", a:"hormon", b:"enzym", c:"witamina", d:"bakteria"},
+{cat:"Body and mind", q:"compulsive", a:"kompulsywny", b:"rozważny", c:"spokojny", d:"umiarkowany"},
+{cat:"Body and mind", q:"athlete", a:"sportowiec", b:"trener", c:"sędzia", d:"kibic"},
+{cat:"Body and mind", q:"body builder", a:"kulturysta", b:"biegacz", c:"pływak", d:"rowerzysta"},
+{cat:"Body and mind", q:"psychological", a:"psychologiczny", b:"fizyczny", c:"chemiczny", d:"mechaniczny"},
+{cat:"Body and mind", q:"consequence", a:"następstwo", b:"przyczyna", c:"początek", d:"szansa"},
+{cat:"Body and mind", q:"routine", a:"rutyna", b:"przerwa", c:"chaos", d:"zmiana"},
+{cat:"Body and mind", q:"lifestyle", a:"styl życia", b:"plan dnia", c:"harmonogram", d:"obowiązek"},
+{cat:"Body and mind", q:"regular", a:"regularny", b:"losowy", c:"sporadyczny", d:"rzadki"},
+{cat:"Body and mind", q:"specialist", a:"specjalista", b:"amator", c:"pacjent", d:"uczeń"},
+{cat:"Body and mind", q:"decision", a:"decyzja", b:"wymówka", c:"problem", d:"błąd"},
+{cat:"Body and mind", q:"mental", a:"psychiczny", b:"fizyczny", c:"zewnętrzny", d:"manualny"},
+{cat:"Body and mind", q:"health", a:"zdrowie", b:"choroba", c:"ból", d:"uraz"},
+{cat:"Body and mind", q:"exercise", a:"ćwiczenie", b:"leczenie", c:"odpoczynek", d:"dieta"},
+{cat:"Body and mind", q:"paradoxically", a:"paradoksalnie", b:"przypadkowo", c:"naturalnie", d:"ostatecznie"},
+{cat:"Body and mind", q:"body building", a:"kulturystyka", b:"gimnastyka", c:"rehabilitacja", d:"lekkoatletyka"},
+{cat:"Body and mind", q:"individuals", a:"jednostki", b:"społeczeństwa", c:"tłumy", d:"rodziny"},
+{cat:"Body and mind", q:"to see oneself", a:"postrzegać siebie", b:"chwalić się", c:"porównywać", d:"ukrywać się"},
+{cat:"Body and mind", q:"in a bad light", a:"w złym świetle", b:"bez problemu", c:"na pokaz", d:"na serio"},
+{cat:"Body and mind", q:"desire", a:"pragnienie", b:"obowiązek", c:"przypadek", d:"ryzyko"},
+{cat:"Body and mind", q:"perfect body", a:"idealne ciało", b:"silne mięśnie", c:"dobra kondycja", d:"zdrowa sylwetka"},
+{cat:"Body and mind", q:"to intensify", a:"intensyfikować", b:"osłabiać", c:"ograniczać", d:"zmniejszać"},
+{cat:"Body and mind", q:"workout routine", a:"rutyna treningowa", b:"plan dnia", c:"tryb życia", d:"czas wolny"},
+{cat:"Body and mind", q:"out of reach", a:"nieosiągalny", b:"bliski", c:"łatwy", d:"możliwy"},
+{cat:"Body and mind", q:"therefore", a:"dlatego", b:"jednak", c:"zamiast", d:"nagle"},
+{cat:"Body and mind", q:"to experience", a:"doświadczać", b:"unikać", c:"powodować", d:"zatrzymywać"},
+{cat:"Body and mind", q:"anxiety", a:"lęk", b:"radość", c:"spokój", d:"pewność"},
+{cat:"Body and mind", q:"depression", a:"depresja", b:"energia", c:"motywacja", d:"ulga"},
+{cat:"Body and mind", q:"social phobia", a:"fobia społeczna", b:"nieśmiałość", c:"samotność", d:"zmęczenie"},
+{cat:"Body and mind", q:"addiction", a:"uzależnienie", b:"nawyk", c:"przyjemność", d:"zabawa"},
+{cat:"Body and mind", q:"therapy", a:"terapia", b:"operacja", c:"kontrola", d:"diagnoza"},
+{cat:"Body and mind", q:"effective", a:"skuteczny", b:"losowy", c:"chwilowy", d:"fałszywy"},
+{cat:"Body and mind", q:"resistant", a:"odporny", b:"wrażliwy", c:"słaby", d:"kruchy"},
+{cat:"Body and mind", q:"antibiotics", a:"antybiotyki", b:"witaminy", c:"szczepionki", d:"hormony"},
+{cat:"Body and mind", q:"countless", a:"niezliczone", b:"nieliczne", c:"ograniczone", d:"przypadkowe"},
+{cat:"Body and mind", q:"cure", a:"lekarstwo", b:"objaw", c:"choroba", d:"ból"},
+{cat:"Body and mind", q:"plaster cast", a:"gips", b:"bandaż", c:"szyna", d:"opatrunek"},
+{cat:"Body and mind", q:"rash", a:"wysypka", b:"blizna", c:"skaleczenie", d:"oparzenie"},
+{cat:"Body and mind", q:"bruise", a:"siniak", b:"rana", c:"złamanie", d:"opuchlizna"},
+{cat:"Body and mind", q:"mental wellbeing", a:"dobrostan psychiczny", b:"siła fizyczna", c:"kondycja", d:"wytrzymałość"},
+{cat:"Body and mind", q:"memory loss", a:"utrata pamięci", b:"brak koncentracji", c:"senność", d:"dezorientacja"},
+{cat:"Body and mind", q:"energetic", a:"energiczny", b:"spokojny", c:"powolny", d:"leniw y"},
+{cat:"Body and mind", q:"out of shape", a:"nie w formie", b:"gotowy", c:"aktywny", d:"sprawny"}
 ];
 
 let current = 0;
