--- a/20260201_angielski.html
+++ b/20260201_angielski.html
@@ -161,7 +161,51 @@ let questions = [
 {cat:"Body and mind", q:"mental wellbeing", a:"dobrostan psychiczny", b:"siła fizyczna", c:"kondycja", d:"wytrzymałość"},
 {cat:"Body and mind", q:"memory loss", a:"utrata pamięci", b:"brak koncentracji", c:"senność", d:"dezorientacja"},
 {cat:"Body and mind", q:"energetic", a:"energiczny", b:"spokojny", c:"powolny", d:"leniw y"},
-{cat:"Body and mind", q:"out of shape", a:"nie w formie", b:"gotowy", c:"aktywny", d:"sprawny"}
+{cat:"Body and mind", q:"out of shape", a:"nie w formie", b:"gotowy", c:"aktywny", d:"sprawny"},
+    {cat:"A material world", q:"overcharged", a:"obciążony zbyt wysoką opłatą", b:"obciążony emocjonalnie", c:"zbyt zmęczony", d:"przeciążony psychicznie"},
+{cat:"A material world", q:"complain", a:"skarżyć się", b:"porównywać", c:"zadowalać się", d:"ignorować"},
+{cat:"A material world", q:"trend", a:"trend, tendencja", b:"reguła", c:"przypadek", d:"problem"},
+{cat:"A material world", q:"pricing", a:"ustalanie cen", b:"płacenie gotówką", c:"promocja", d:"zarabianie"},
+{cat:"A material world", q:"served", a:"obsłużony", b:"zaproszony", c:"zauważony", d:"zatrzymany"},
+{cat:"A material world", q:"experiment", a:"eksperyment", b:"egzamin", c:"doświadczenie życiowe", d:"próba generalna"},
+{cat:"A material world", q:"performance", a:"występ", b:"próba", c:"koncertowanie", d:"zachowanie"},
+{cat:"A material world", q:"audience", a:"publiczność", b:"aktorzy", c:"jury", d:"obsługa"},
+{cat:"A material world", q:"worth", a:"wart", b:"drogi", c:"bezcenny", d:"tani"},
+{cat:"A material world", q:"determined", a:"określony", b:"zdecydowany", c:"uparty", d:"pewny siebie"},
+{cat:"A material world", q:"passive", a:"strona bierna", b:"czas przeszły", c:"tryb rozkazujący", d:"strona czynna"},
+{cat:"A material world", q:"focus", a:"skupiać się", b:"rozpraszać się", c:"ignorować", d:"zastanawiać się"},
+{cat:"A material world", q:"action", a:"czynność", b:"osoba", c:"miejsce", d:"powód"},
+{cat:"A material world", q:"informal", a:"nieformalny", b:"oficjalny", c:"uprzejmy", d:"sztywny"},
+{cat:"A material world", q:"formal", a:"formalny", b:"luźny", c:"potoczny", d:"prywatny"},
+{cat:"A material world", q:"renovated", a:"odnawiany", b:"burzony", c:"sprzątany", d:"budowany"},
+{cat:"A material world", q:"finished", a:"ukończony", b:"rozpoczęty", c:"planowany", d:"odłożony"},
+{cat:"A material world", q:"informed", a:"poinformowany", b:"zaskoczony", c:"zainteresowany", d:"zmieszany"},
+{cat:"A material world", q:"explained", a:"wyjaśniony", b:"przeczytany", c:"zapisany", d:"zapamiętany"},
+{cat:"A material world", q:"delay", a:"opóźnienie", b:"przerwa", c:"postój", d:"zmiana"},
+{cat:"A material world", q:"finance", a:"finanse", b:"psychologia", c:"zdrowie", d:"sport"},
+{cat:"A material world", q:"raised", a:"podniesiony", b:"obniżony", c:"zatrzymany", d:"wyrównany"},
+{cat:"A material world", q:"salary", a:"pensja", b:"nagroda", c:"dług", d:"rachunek"},
+{cat:"A material world", q:"produced", a:"wyprodukowany", b:"sprzedany", c:"kupiony", d:"naprawiony"},
+{cat:"A material world", q:"contacted", a:"skontaktowano się", b:"zignorowano", c:"zablokowano", d:"przeproszono"},
+{cat:"A material world", q:"considering", a:"rozważając", b:"odrzucając", c:"akceptując", d:"zapominając"},
+{cat:"A material world", q:"publish", a:"opublikować", b:"usunąć", c:"ukryć", d:"zredagować"},
+{cat:"A material world", q:"timetable", a:"rozkład jazdy", b:"lista cen", c:"plan lekcji", d:"kalendarz"},
+{cat:"A material world", q:"chosen", a:"wybrany", b:"zgubiony", c:"odrzucony", d:"zapamiętany"},
+{cat:"A material world", q:"winner", a:"zwycięzca", b:"uczestnik", c:"organizator", d:"kibic"},
+{cat:"A material world", q:"article", a:"artykuł", b:"ogłoszenie", c:"instrukcja", d:"formularz"},
+{cat:"A material world", q:"update", a:"aktualizować", b:"usuwać", c:"drukować", d:"zapisywać"},
+{cat:"A material world", q:"average", a:"przeciętny", b:"wyjątkowy", c:"skrajny", d:"minimalny"},
+{cat:"A material world", q:"vote", a:"głosować", b:"decydować", c:"proponować", d:"ogłaszać"},
+{cat:"A material world", q:"served", a:"serwowane", b:"gotowane", c:"kupowane", d:"przechowywane"},
+{cat:"A material world", q:"improve", a:"poprawić", b:"zatrzymać", c:"zniszczyć", d:"pogorszyć"},
+{cat:"A material world", q:"system", a:"system", b:"problem", c:"schemat", d:"przypadek"},
+{cat:"A material world", q:"charged", a:"obciążony opłatą", b:"zachęcony", c:"nagradzany", d:"zwolniony"},
+{cat:"A material world", q:"fair", a:"uczciwy", b:"szybki", c:"łatwy", d:"bogaty"},
+{cat:"A material world", q:"noticed", a:"zauważony", b:"zignorowany", c:"zapomniany", d:"ukryty"},
+{cat:"A material world", q:"opinion", a:"opinia", b:"fakt", c:"argument", d:"reguła"},
+{cat:"A material world", q:"recently", a:"ostatnio", b:"nagle", c:"kiedyś", d:"wcześnie"},
+{cat:"A material world", q:"decided", a:"zdecydowano", b:"zaplanowano", c:"odłożono", d:"zignorowano"}
+
 ];
 
 let current = 0;
