--- a/20250901_szkola.html
+++ b/20250901_szkola.html
@@ -30,6 +30,7 @@
 <tr><td></td><td><a href="20260126_sonia.html">Sonia Marmieładow</a></td></tr>
 <tr><td></td><td><a href="20260126_rodion.html">Rodion Raskolnikow 2</a></td></tr>
 <tr><td></td><td><a href="20260126_tytul.html">Tytuł</a></td></tr>
+<tr><td></td><td><a href="20260126_geografia.html">Geografia</a></td></tr>
 <tr><td></td><td><a href="20260114_biologia.html">Biologia 2</a></td></tr>
 <tr><td></td><td><a href="20260112_historia2.html">Historia 5</a></td></tr>
 <tr><td></td><td><a href="20260112_historia.html">Historia 4</a></td></tr>
