--- a/20250901_szkola.html
+++ b/20250901_szkola.html
@@ -24,6 +24,7 @@
 <tr><th>Lp.</th><th>Nazwa</th></tr>
 <tr><td></td><td><a href="https://dawid108.github.io/dawi2026/index.html">Gry</a></td></tr>
 <tr><td></td><td><a href="https://dawid108.github.io/dawi2026/20260106_gry.html">Tabela</a></td></tr>
+<tr><td></td><td><a href="20260209_historia.html">Historia</a></td></tr>
 <tr><td></td><td><a href="20260126_zbrodnia.html">Zbrodnia i Kara 2</a></td></tr>
 <tr><td></td><td><a href="20260126_petersburg.html">Petersburg</a></td></tr>
 <tr><td></td><td><a href="20260126_cechy.html">Cechy Gatunkowe</a></td></tr>
@@ -49,6 +50,7 @@
         <div class="table-wrapper">
             <table border="1">
 <tr><th>Lp.</th><th>Nazwa</th></tr>
+<tr><td></td><td><a href="20260209_zamowienie.html">Fotografia</a></td></tr>
 <tr><td></td><td><a href="20260129_czat.html">Czat</a></td></tr>
 <tr><td></td><td><a href="20260121_rejestracja.html">Sklep</a></td></tr>
 <tr><td></td><td><a href="20251123_rejestracja.html">Tulipany</a></td></tr>
@@ -64,6 +66,7 @@
         <div class="table-wrapper">
             <table border="1">
 <tr><th>Lp.</th><th>Nazwa</th></tr>
+<tr><td></td><td><a href="20251209_tlo.html">Tło Obrazkowe</a></td></tr>
 <tr><td></td><td><a href="20251202_listy.html">Listy</a></td></tr>
 <tr><td></td><td><a href="20251125_tabelkaspr.html">Sprawdzian</a></td></tr>
 <tr><td></td><td><a href="20251125_tabelka4.html">Tabele 4</a></td></tr>
